--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body {
     background-color: #e3e3e3;
     margin: auto;
     width: 500px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: sans-serif;
 }
 
 div {
